tests/error/modifier_errors/flag_call.err
Error: Unitary constraint violation (at $FILE:12:4)
   | 
10 | @guppy(unitary_flags=UnitaryFlags.Dagger)
11 | def test(x: qubit) -> None:
12 |     foo(x)
   |     ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
